--- a/templates/show_item.html
+++ b/templates/show_item.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ item.title }}</title>
 </head>
 
@@ -20,7 +22,7 @@
     Matkabudjetti: {{ item.budget }} €
   </p>
   <p>
-    Suosittelija: {{ item.username }}
+    Suosittelija: <a href="/user/{{ item.user_id }}">{{ item.username }}</a>
   </p>
   <p>
     <a href="/">Takaisin</a>
