--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uusi suositus</title>
 </head>
 
@@ -10,15 +12,15 @@
   <form action="/create_item" method="post">
     <p>
       Matkakohde: <br />
-      <input type="text" name="title" />
+      <input type="text" name="title" maxlength="50" required/>
     </p>
     <p>
       Kuvaus: <br />
-      <textarea name="description" rows="8"cols="60"></textarea>
+      <textarea name="description" rows="8"cols="60" maxlength="1000" required></textarea>
     </p>
     <p>
       Matkabudjetti: <br />
-      <input type="text" name="budget" size="5"/> €
+      <input type="text" name="budget" size="5" pattern="^[1-9][0-9]{0,5}$" required/> €
     </p>
     <input type="submit" value="Luo suositus"/>
   </form>
