--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Matkakohteet</title>
 </head>
 
@@ -12,26 +14,30 @@
   <p>
     Olet kirjautunut nimellä {{ session.username }}, id-numerosi on {{ session.user_id }}
   </p>
-  {% endif %}
-
-  </p>
-    <a href="/login">Kirjaudu sisään</a>
-    <a href="/register">Luo tunnus</a>
+  <p>
     <a href="/logout">Kirjaudu ulos</a>
   </p>
-
-  </p>
+  <p>
     <a href="/new_item">Uusi suositus</a>
+  </p>
+  {% else %}
+  <p>
+    <a href="/login">Kirjaudu sisään</a>
+    <a href="/register">Luo tunnus</a>
+  </p>
+  {% endif %}
+
+  <p>
     <a href="/find_item">Etsi matkakohde</a>
   </p>
 
   <h2>Suositukset</h2>
+
   <ul>
     {% for item in items %}
     <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
     {% endfor %}
-  </ul>
-  
+  </ul>  
 </body>
 
 </html>
