--- a/templates/find_item.html
+++ b/templates/find_item.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Etsi matkakohde</title>
 </head>
   
@@ -9,23 +11,23 @@
   <h1>Etsi matkakohde</h1>
 
   <form action="/find_item" method="get">
-  <p>
-    Hakusana: <input type="text" name="query" value="{{ query }}">
-  </p>
-  <input type="submit" value="Lähetä">
+    <p>
+      Hakusana: <input type="text" name="query" value="{{ query }}">
+    </p>
+    <input type="submit" value="Lähetä">
   </form>
 
   <p>
     <a href="/">Takaisin</a>
   </p>
-  {% if query %}
-  <h2>Tulokset</h2>
 
-  <ul>
-    {% for result in results %}
-    <li><a href="item/{{ item.id }}">{{ item.title }}</a></li>
-    {% endfor %}
-  </ul>
+  {% if query %}
+    <h2>Tulokset</h2>
+    <ul>
+      {% for result in results %}
+        <li><a href="item/{{ result.id }}">{{ result.title }}</a></li>
+      {% endfor %}
+    </ul>
 </body>
 
 </html>
