--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Suosituksen muokkaus</title>
 </head>
 
@@ -10,11 +12,11 @@
   <form action="/update_item" method="post">
     <p>
       Matkakohde: <br />
-      <input type="text" name="title" value="{{ item.title }}"/>
+      <input type="text" name="title" value="{{ item.title }}" maxlength="50" required/>
     </p>
     <p>
       Kuvaus: <br />
-      <textarea name="description" rows="8"cols="60">{{ item.description }}</textarea>
+      <textarea name="description" rows="8"cols="60" maxlength="1000" required>{{ item.description }}</textarea>
     </p>
     <input type="hidden" name="item_id" value="{{ item.id }}" />
     <input type="submit" value="Päivitä suositusta"/>
