--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -22,6 +22,25 @@
       Matkabudjetti: <br />
       <input type="text" name="budget" size="5" pattern="^[1-9][0-9]{0,5}$" required/> €
     </p>
+    <p>
+      Osasto: <br />
+      <select name="selection">
+        <option value="">valitse</option>
+        <option value="maat">maat</option>
+        <option value="kaupungit">kaupungit</option>
+        <option value="muut">muut</option>
+      </select>
+    </p>
+    <p>
+      Arvostelu: <br />
+      <select name="selection">
+        <option value="">valitse</option>
+        <option value="erinomainen">erinomainen</option>
+        <option value="hyvä">hyvä</option>
+        <option value="tyydyttävä">tyydyttävä</option>
+        <option value="heikko">heikko</option>
+      </select>
+    </p>
     <input type="submit" value="Luo suositus"/>
   </form>
 </body>
