--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -22,6 +22,17 @@
       Matkabudjetti: <br />
       <input type="text" name="budget" size="5" pattern="^[1-9][0-9]{0,5}$" required/> €
     </p>
+    {% for class in classes %}
+    <p>
+      {{ class }}: <br />
+      <select name="classes">
+        <option value="">valitse</option>
+      {% for option in classes[class] %}
+        <option value="{{ class }}:{{ option }}">{{ option }}</option>
+      {% enfor %}
+      </select>
+    </p>
+    {% endfor %}
     <p>
       Osasto: <br />
       <select name="selection">
