--- a/templates/find_item.html
+++ b/templates/find_item.html
@@ -28,6 +28,8 @@
         <li><a href="item/{{ result.id }}">{{ result.title }}</a></li>
       {% endfor %}
     </ul>
+  {% endif %}
+  <p><a href="/">Takaisin</a></p>
 </body>
 
 </html>
