--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,9 @@
   <p>
     <a href="/new_item">Uusi suositus</a>
   </p>
+  <p>
+    <a href="/favorites">Omat suosikit</a>
+  </p>
   {% else %}
   <p>
     <a href="/login">Kirjaudu sisään</a>
