--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -29,29 +29,10 @@
         <option value="">valitse</option>
       {% for option in classes[class] %}
         <option value="{{ class }}:{{ option }}">{{ option }}</option>
-      {% enfor %}
+      {% endfor %}
       </select>
     </p>
     {% endfor %}
-    <p>
-      Osasto: <br />
-      <select name="selection">
-        <option value="">valitse</option>
-        <option value="maat">maat</option>
-        <option value="kaupungit">kaupungit</option>
-        <option value="muut">muut</option>
-      </select>
-    </p>
-    <p>
-      Arvostelu: <br />
-      <select name="selection">
-        <option value="">valitse</option>
-        <option value="erinomainen">erinomainen</option>
-        <option value="hyvä">hyvä</option>
-        <option value="tyydyttävä">tyydyttävä</option>
-        <option value="heikko">heikko</option>
-      </select>
-    </p>
     <input type="submit" value="Luo suositus"/>
   </form>
 </body>
