--- a/static/main.css
+++ b/static/main.css
@@ -1,1 +1,20 @@
+body {
+  margin: auto;
+  max-width: 50em;
+  font-family: sans-serif;
+  background-color: rgb(146, 208, 143);
+}
 
+.item {
+  border: 2px solid black;
+  margin: 1em;
+  padding: 0.2em 0.5em;
+}
+
+.info {
+  border: 2px solid black;
+  margin: 1em;
+  padding: 0.5em;
+  background-color: rgb(255, 43, 43);
+  color: white;
+}
