--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,41 +1,39 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Suosituksen muokkaus</title>
-</head>
+{% block title %}Suosituksen muokkaus{% endblock %}
 
-<body>
-  <h1>Suosituksen muokkaus</h1>
-  <form action="/update_item" method="post">
-    <p>
-      Matkakohde: <br />
-      <input type="text" name="title" value="{{ item.title }}" maxlength="50" required/>
-    </p>
-    <p>
-      Kuvaus: <br />
-      <textarea name="description" rows="8"cols="60" maxlength="1000" required>{{ item.description }}</textarea>
-    </p>
-    <input type="hidden" name="item_id" value="{{ item.id }}" />
-    {% for class in all_classes %}
-    <p>
-      {{ class }}: <br />
-      <select name="classes">
-        <option value="">(valitse)</option>
-      {% for option in all_classes[class] %}
-        {% if classes[class] == option %}
-        <option value="{{ class }}:{{ option }}" selected>{{ option }}</option>
-        {% else %}
-        <option value="{{ class }}:{{ option }}">{{ option }}</option>
-        {% endif %}
-      {% endfor %}
-      </select>
-    </p>
+{% block content %}
+<h2>{{ item.title }}</h2>
+<h3>Suosituksen muokkaus</h3>
+<form action="/update_item" method="post">
+  <p>
+    Kohde: <br />
+    <input type="text" name="title" value="{{ item.title }}" maxlength="50" required/>
+  </p>
+  <p>
+    Kuvaus: <br />
+    <textarea name="description" rows="8"cols="60" maxlength="1000" required>{{ item.description }}</textarea>
+  </p>
+  <input type="hidden" name="item_id" value="{{ item.id }}" />
+  {% for class in all_classes %}
+  <p>
+    {{ class }}: <br />
+    <select name="classes[]">
+      <option value="">(valitse)</option>
+    {% for option in all_classes[class] %}
+      {% if classes[class] == option %}
+      <option value="{{ class }}:{{ option }}" selected>{{ option }}</option>
+      {% else %}
+      <option value="{{ class }}:{{ option }}">{{ option }}</option>
+      {% endif %}
     {% endfor %}
-    <input type="submit" value="Päivitä suositusta"/>
-  </form>
-</body>
-
-</html>
+    </select>
+  </p>
+  {% endfor %}
+  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+  <input type="submit" value="Päivitä suositusta"/>
+</form>
+<p>
+  <a href="/item/{{ item.id }}">Takaisin</a>
+</p>
+{% endblock %}
