--- a/templates/find_item.html
+++ b/templates/find_item.html
@@ -1,35 +1,24 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Etsi matkakohde</title>
-</head>
-  
-<body>
-  <h1>Etsi matkakohde</h1>
+{% block title %}Etsi matkakohde{% endblock %}
 
-  <form action="/find_item" method="get">
-    <p>
-      Hakusana: <input type="text" name="query" value="{{ query }}">
-    </p>
-    <input type="submit" value="Lähetä">
-  </form>
+{% block content %}
+<h2>Etsi matkakohde</h2>
 
+<form action="/find_item" method="get">
   <p>
-    <a href="/">Takaisin</a>
+    Hakusana: <input type="text" name="query" value="{{ query }}">
   </p>
+  <input type="submit" value="Lähetä">
+</form>
 
-  {% if query %}
-    <h2>Tulokset</h2>
-    <ul>
-      {% for result in results %}
-        <li><a href="item/{{ result.id }}">{{ result.title }}</a></li>
-      {% endfor %}
-    </ul>
-  {% endif %}
-  <p><a href="/">Takaisin</a></p>
-</body>
+{% if query %}
+<h3>Tulokset</h3>
 
-</html>
+<ul>
+  {% for result in results %}
+    <li><a href="item/{{ result.id }}">{{ result.title }}</a></li>
+  {% endfor %}
+</ul>
+{% endif %}
+{% endblock %}
