--- a/templates/index.html
+++ b/templates/index.html
@@ -1,41 +1,19 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Matkakohteet</title>
-</head>
+{% block title %}Matkakohteet{% endblock %}
 
-<body>
-  <h1>Matkakohteet</h1>
+{% block content %}
+<h2>Suositukset</h2>
 
-  {% if session.username %}
-  <p>
-    Olet kirjautunut nimellä {{ session.username }}, id-numerosi on {{ session.user_id }}
-  </p>
-  <p>
-    <a href="/logout">Kirjaudu ulos</a>
-  </p>
-  <p>
-    <a href="/new_item">Uusi suositus</a>
-  </p>
-  <p>
-    <a href="/favorites">Omat suosikit</a>
-  </p>
-  {% else %}
-  <p>
-    <a href="/login">Kirjaudu sisään</a>
-    <a href="/register">Luo tunnus</a>
-  </p>
-  {% endif %}
-
-  <p>
-    <a href="/find_item">Etsi matkakohde</a>
-  </p>
-
-  <h2>Suositukset</h2>
-
+{% for item in items %}
+<div class="item">
+<a href="/item/{{ item.id }}">{{ item.title }}</a> <br />
+Suosittelija: <a href="/user/{{ item.user_id }}">{{ item.username }}</a> <br />
+Lisätty suosikkeihin: {{ item.favorite_count }}
+</div>
+{% endfor %}
+</ul>
+{% endblock %}
   <ul>
     {% for item in items %}
     <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
