--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -1,40 +1,34 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Uusi suositus</title>
-</head>
+{% block title %}Uusi suositus{% endblock %}
 
-<body>
-  <h1>Uusi suositus</h1>
-  <form action="/create_item" method="post">
-    <p>
-      Matkakohde: <br />
-      <input type="text" name="title" maxlength="50" required/>
-    </p>
-    <p>
-      Kuvaus: <br />
-      <textarea name="description" rows="8"cols="60" maxlength="1000" required></textarea>
-    </p>
-    <p>
-      Matkabudjetti: <br />
-      <input type="text" name="budget" size="5" pattern="^[1-9][0-9]{0,5}$" required/> €
-    </p>
-    {% for class in classes %}
-    <p>
-      {{ class }}: <br />
-      <select name="classes">
-        <option value="">valitse</option>
-      {% for option in classes[class] %}
-        <option value="{{ class }}:{{ option }}">{{ option }}</option>
-      {% endfor %}
-      </select>
-    </p>
+{% block content %}
+<h2>Uusi suositus</h2>
+<form action="/create_item" method="post">
+  <p>
+    <label for="title">Matkakohde</label>: <br />
+    <input type="text" name="title" id="title" maxlength="50" required/>
+  </p>
+  <p>
+    <label for="description">Kuvaus</label>: <br />
+    <textarea name="description" id="description" rows="8" cols="60" maxlength="1000" required></textarea>
+  </p>
+  <p>
+    <label for="budget">Matkabudjetti</label>: <br />
+    <input type="text" name="budget" id="budget" size="5" pattern="^[1-9][0-9]{0,5}$" required/> €
+  </p>
+  {% for class in classes %}
+  <p>
+    <label for="class{{ class }}">{{ class }}</label>: <br />
+    <select name="classes" id="class{{ class }}">
+      <option value="">valitse</option>
+    {% for option in classes[class] %}
+      <option value="{{ class }}:{{ option }}">{{ option }}</option>
     {% endfor %}
-    <input type="submit" value="Luo suositus"/>
-  </form>
-</body>
-
-</html>
+    </select>
+  </p>
+  {% endfor %}
+  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+  <input type="submit" value="Luo suositus"/>
+</form>
+{% endblock %}
