--- a/templates/show_item.html
+++ b/templates/show_item.html
@@ -1,49 +1,40 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ item.title }}</title>
-</head>
+{% block title %}{{ item.title }}{% endblock %}
 
-<body>
-  <h1>{{ item.title }}</h1>
-  {% if session.user_id == item.user_id %}
-  <p>
-    <a href="/edit_item/{{ item.id }}">Muokkaa</a>
-    <a href="/remove_item/{{ item.id }}">Poista</a>
-  </p>
-  {% endif %}
-  <p>
-    {{ item.description }}
-  </p>
-  <p>
-    Matkabudjetti: {{ item.budget }} €
-  </p>
-  <p>
-    Suosittelija: <a href="/user/{{ item.user_id }}">{{ item.username }}</a>
-  </p>
-  {% if classes %}
-  <p>
-    Luokat:
-    <ul>
-      {% for class in classes %}
-      <li>{{ class.title }}: {{ class.value }}</li>
-      {% endfor %}
-    </ul>
-  </p>
-  {% endif %}
-  {% if session.user_id and session.user_id != item.user_id %}
-    <h2>Lisää suosikiksi</h2>
-    <form action="/add_favorite" method="post">
-      <input type="hidden" name="item_id" value="{{ item.id }}">
-      <input type="submit" value="Lisää suosikiksi">
-    </form>
-  {% endif %}
-  <p>
-    <a href="/">Takaisin</a>
-  </p>
-</body>
+{% block content %}
+<h2>{{ item.title }}</h2>
 
-</html>
+{% if session.user_id == item.user_id %}
+<p>
+  <a href="/edit_item/{{ item.id }}">Muokkaa</a>
+  <a href="/remove_item/{{ item.id }}">Poista</a>
+  <a href="/images/{{ item.id }}">Kuvat</a>
+</p>
+{% endif %}
+
+{% for image in images %}
+<ing src="/image/{{ image.id }}" alt="Matkakuva" />
+{% endfor %}
+
+<p>
+  {{ item.description|show_lines }}
+</p>
+<ul>
+  <li>Matkabudjetti: {{ item.budget }} €</li>
+  <li>Suosittelija: <a href="/user/{{ item.user_id }}">{{ item.username }}</a></li>
+{% if classes %}
+  {% for class in classes %}
+  <li>{{ class.title }}: {{ class.value }}</li>
+  {% endfor %}
+{% endif %}
+</ul>
+{% if session.user_id %}
+<h3>Lisää suosikiksi</h3>
+<form action="/add_favorite" method="post">
+  <input type="hidden" name="item_id" value="{{ item.id }}">
+  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+  <input type="submit" value="Lisää suosikiksi">
+</form>
+{% endif %}
+{% endblock %}
