--- a/templates/show_user.html
+++ b/templates/show_user.html
@@ -1,26 +1,16 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Käyttäjä {{ user.username }}</title>
-</head>
+{% block title %}{{ user.username }}{% endblock %}
 
-<body>
-  <h1>Käyttäjä{{ user.username }}</h1>
-  <p>
-    Käyttäjällä on yhteensä {{ items|count }} suositusta.
-  </p>
-  <h2>Suositukset</h2>
-  <ul>
-    {% for item in items %}
-      <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
-    {% endfor %}
-  </ul>
-  <p>
-    <a href="/">Takaisin</a>
-  </p>
-</body>
-
-</html>
+{% block content %}
+<h2>Käyttäjä {{ user.username }}</h2>
+<p>
+  Käyttäjällä on yhteensä {{ items|count }} suositusta.
+</p>
+<h3>Suositukset</h3>
+<ul>
+  {% for item in items %}
+    <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
+  {% endfor %}
+</ul>
+{% endblock %}
